--- a/src/components/molecules/card/post.module.scss
+++ b/src/components/molecules/card/post.module.scss
@@ -23,7 +23,7 @@
 }
 
 .date {
-	color: $ts-red;
+	color: $ts-red-on-white;
 	margin-bottom: 4px;
 	font-weight: 600;
 }
