--- a/src/styles/common.scss
+++ b/src/styles/common.scss
@@ -47,6 +47,12 @@ $ts-darkened-storyH: #002b38;
 $ts-darkened-topicB: #333262;
 $ts-darkened-topicH: #03013e;
 
+// Colors for accessibility
+// https://app.contrast-finder.org/result.html?foreground=ff224a&background=white&ratio=4.5&isBackgroundTested=false&algo=Rgb&lang=en
+$ts-red-on-white: #e91742;
+// https://app.contrast-finder.org/result.html?foreground=White&background=%23ff224a&ratio=4.5&isBackgroundTested=true&algo=Rgb&lang=en
+$ts-red-under-white: #EE031D;
+
 $ts-shadow-small-default: 0px 4px 10px rgba(0, 0, 0, 0.15);
 $ts-shadow-small-hover: 0px 4px 16px rgba(0, 0, 0, 0.3);
 
